refactoring new dir/ new scripts and server.js

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet" />
     <link
       rel="stylesheet"
-      href="./index.css" />
+      href="./css/index.css" />
     <title>Document</title>
   </head>
   <body>
@@ -32,21 +32,21 @@
             <li>
               <a
                 href="/"
-                class="nav__link"
+                class="nav__link home__link"
                 >Início</a
               >
             </li>
             <li>
               <a
                 href="/favoritos"
-                class="nav__link"
+                class="nav__link fav__link"
                 >Favoritos</a
               >
             </li>
             <li>
               <a
                 href="/receitas"
-                class="nav__link"
+                class="nav__link recipe__link"
                 >Receitas</a
               >
             </li>
@@ -64,14 +64,13 @@
         </div>
       </nav>
     </header>
+
     <main
       class="main"
       id="main-content"></main>
+
     <script
       type="module"
       src="./main.js"></script>
-    <script
-      type="module"
-      src="./scripts/router/index.js"></script>
   </body>
 </html>
