--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,4 +1,4 @@
-<div class="home container">
+<section class="home container">
   <div class="home__info">
     <h1 class="home__title">Mundo Mestre-Cuca</h1>
     <p class="home__subtitle">
@@ -18,25 +18,25 @@
       </legend>
       <select
         class="form__select"
-        name="country"
-        id="country">
+        name="area"
+        id="area">
         <option value="American">Americano</option>
         <option value="Dutch">Alemão</option>
         <option value="Canadian">Canadense</option>
         <option value="Chinese">Chines</option>
         <option value="Egyptian">Egípto</option>
+        <option value="Spanish">Espanhol</option>
         <option value="Greek">Grecia</option>
-        <option value="British">Inglês</option>
         <option value="Indian">Indiano</option>
+        <option value="British">Inglês</option>
         <option value="Irish">Irlandêsa</option>
         <option value="Japanese">Japones</option>
         <option value="Mexican">Mexicano</option>
         <option value="Portuguese">Portugues</option>
-        <option value="Spanish">Espanhol</option>
         <option
           selected
-          value="Italian">
-          Italiano
+          value='null'>
+          Escolha uma região
         </option>
       </select>
     </fieldset>
@@ -48,4 +48,4 @@
       Buscar
     </button>
   </form>
-</div>
+</section>
