--- a/public/pages/recipe.html
+++ b/public/pages/recipe.html
@@ -1,4 +1,4 @@
-<div
+<section
   class="recipe container"
   id="recipe">
   <h2>Essas são as receitas mais famosas!</h2>
@@ -9,11 +9,11 @@
   <article
     class="modal__overlay overlay"
     id="modal">
-    <section
+    <div
       class="modal__background"
-      id="modal-background"></section>
+      id="modal-background"></div>
     <section
       class="modal__container container"
       id="modal-container"></section>
   </article>
-</div>
+</section>
