add html structure from favorite

--- a/public/pages/favorite.html
+++ b/public/pages/favorite.html
@@ -1,1 +1,30 @@
-<h1>olá, esse é o favoritos</h1>
+<section
+  class="favorite container"
+  id="favorite">
+  <h2 class="fav__title">Seus favoritos</h2>
+
+  <div
+    class="fav__list"
+    id="fav-list">
+    <div
+      class="fav__item"
+      id="fav-item">
+      <h3 class="fav__item-title">Bitterballen</h3>
+      <img
+        class="fav__item-img"
+        src="https://www.themealdb.com/images/media/meals/lhqev81565090111.jpg"
+        alt="image of" />
+
+      <div class="fav__item-info">
+        <span class="info__area">Chinese</span>
+        <span class="info__category">Chicken</span>
+      </div>
+
+      <button
+        class="fav__item-button"
+        id="fav-btn">
+        Visualizar
+      </button>
+    </div>
+  </div>
+</section>
