add new favorite script and structure

--- a/public/pages/favorite.html
+++ b/public/pages/favorite.html
@@ -6,25 +6,17 @@
   <div
     class="fav__list"
     id="fav-list">
+  
+
+
+  <article
+    class="modal__overlay overlay"
+    id="modal">
     <div
-      class="fav__item"
-      id="fav-item">
-      <h3 class="fav__item-title">Bitterballen</h3>
-      <img
-        class="fav__item-img"
-        src="https://www.themealdb.com/images/media/meals/lhqev81565090111.jpg"
-        alt="image of" />
-
-      <div class="fav__item-info">
-        <span class="info__area">Chinese</span>
-        <span class="info__category">Chicken</span>
-      </div>
-
-      <button
-        class="fav__item-button"
-        id="fav-btn">
-        Visualizar
-      </button>
-    </div>
-  </div>
+      class="modal__background"
+      id="modal-background"></div>
+    <section
+      class="modal__container container"
+      id="modal-container"></section>
+  </article>
 </section>
