add handleOpenModal to show modal on recipes and favorite

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,51 +1,39 @@
 <section class="home container">
-  <div class="home__info">
-    <h1 class="home__title">Mundo Mestre-Cuca</h1>
-    <p class="home__subtitle">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum quidem
-      saepe a magni distinctio, nisi esse asperiores facilis obcaecati totam
-      doloremque consectetur deserunt fuga magnam ullam ex, quisquam rerum
-      accusantium?
-    </p>
-  </div>
+	<div class="home__info">
+		<h1 class="home__title">Mundo Mestre-Cuca</h1>
+		<p class="home__subtitle">
+			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum quidem
+			saepe a magni distinctio, nisi esse asperiores facilis obcaecati totam
+			doloremque consectetur deserunt fuga magnam ullam ex, quisquam rerum
+			accusantium?
+		</p>
+	</div>
 
-  <form
-    class="home__form"
-    id="form">
-    <fieldset class="form__fieldset">
-      <legend class="form__title">
-        Qual país você deseja descobrir receitas?
-      </legend>
-      <select
-        class="form__select"
-        name="area"
-        id="area">
-        <option value="American">Americano</option>
-        <option value="Dutch">Alemão</option>
-        <option value="Canadian">Canadense</option>
-        <option value="Chinese">Chines</option>
-        <option value="Egyptian">Egípto</option>
-        <option value="Spanish">Espanhol</option>
-        <option value="Greek">Grecia</option>
-        <option value="Indian">Indiano</option>
-        <option value="British">Inglês</option>
-        <option value="Irish">Irlandêsa</option>
-        <option value="Japanese">Japones</option>
-        <option value="Mexican">Mexicano</option>
-        <option value="Portuguese">Portugues</option>
-        <option
-          selected
-          value='null'>
-          Escolha uma região
-        </option>
-      </select>
-    </fieldset>
+	<form class="home__form" id="form">
+		<fieldset class="form__fieldset">
+			<legend class="form__title">
+				Qual país você deseja descobrir receitas?
+			</legend>
+			<select class="form__select" name="area" id="area">
+				<option value="American">Americano</option>
+				<option value="Dutch">Alemão</option>
+				<option value="Canadian">Canadense</option>
+				<option value="Chinese">Chines</option>
+				<option value="Egyptian">Egípto</option>
+				<option value="Spanish">Espanhol</option>
+				<option value="Greek">Grecia</option>
+				<option value="Indian">Indiano</option>
+				<option value="British">Inglês</option>
+				<option value="Irish">Irlandêsa</option>
+				<option value="Japanese">Japones</option>
+				<option value="Mexican">Mexicano</option>
+				<option value="Portuguese">Portugues</option>
+				<option selected value="null">Escolha uma região</option>
+			</select>
+		</fieldset>
 
-    <button
-      type="submit"
-      class="home__button-search"
-      id="home-btn">
-      Buscar
-    </button>
-  </form>
+		<button type="submit" class="home__button-search" id="home-btn">
+			Buscar
+		</button>
+	</form>
 </section>
